Waar mogelijk overgegaan naar JDK 17 en bijbehorende goodies (records, stream verbeteringen, etc.) en lombok steeds meer buitenspel.