@@ -1,6 +1,9 @@
 package nl.noviaal.controller;
 
-import lombok.extern.slf4j.Slf4j;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
+
 import nl.noviaal.domain.Tag;
 import nl.noviaal.exception.InvalidCommand;
 import nl.noviaal.exception.TagNotFoundException;
@@ -9,6 +12,8 @@ import nl.noviaal.model.response.ItemResponse;
 import nl.noviaal.model.response.TagResponse;
 import nl.noviaal.service.TagService;
 import nl.noviaal.service.UserService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -17,15 +22,11 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 @RestController
 @RequestMapping(path = "/api/tags")
-@Slf4j
 public class TagController extends AbstractController {
 
+  private static final Logger logger = LoggerFactory.getLogger("TagController");
   private final TagService tagService;
 
   public TagController(TagService tagService, UserService userService) {
@@ -36,21 +37,21 @@ public class TagController extends AbstractController {
   @PostMapping(value = {"", "/"})
   public TagResponse save(@RequestBody CreateTag createTag, Authentication authentication) {
     assertIsAdmin(authentication);
-    log.info("save: {}", createTag);
+    logger.info("save: {}", createTag);
     if (isInvalid(createTag)) {
-      log.error("save: createTag is invalid: {}", createTag);
+      logger.error("save: createTag is invalid: {}", createTag);
       throw new InvalidCommand("Create Tag is invalid");
     }
-    if (tagService.find(createTag.getName()).isPresent()) {
-      log.error("save: tag with name {} already exists", createTag.getName());
-      throw new InvalidCommand("Create Tag for existing tag " + createTag.getName());
+    if (tagService.find(createTag.name()).isPresent()) {
+      logger.error("save: tag with name {} already exists", createTag.name());
+      throw new InvalidCommand("Create Tag for existing tag " + createTag.name());
     }
-    return TagResponse.ofTag(tagService.save(new Tag(createTag.getName())));
+    return TagResponse.ofTag(tagService.save(new Tag(createTag.name())));
   }
 
   @GetMapping(value = {"", "/"})
   public List<TagResponse> list() {
-    return tagService.findAll().stream().map(TagResponse::ofTag).collect(Collectors.toList());
+    return tagService.findAll().stream().map(TagResponse::ofTag).toList();
   }
 
   @GetMapping("/{name}")
